button position changed

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       	<div class="caption">
       		<h1 style="text-align: center;">THE KAFTAN EDIT</h1>
       		<p style="text-align: center;">This boho classic is a must for the summer months, take it from sea to city by changing up your accessories</p>
-            <button type="button" class="btn btn-primary btn-lg" style="background-color: white; color: black; border-radius: 0;">SHOP NOW</button>
+            <button type="button" class="btn btn-primary btn-lg" style=" margin-left: 34%; background-color: white; color: black; border-radius: 0;">SHOP NOW</button>
           </div>
         <a href="resources/images/5.jpg" target="_blank">
           <img src="resources/images/5.jpg" alt="Lights" style="width:100%">
@@ -120,7 +120,7 @@
         <div class="caption">
       		<h1 style="text-align: center;">JUMPER 1234</h1>
             <p style="text-align: center;">Our go to for contemporary effortless cashmere jumpers</p>
-            <button type="button" class="btn btn-primary btn-lg" style="background-color: white; color: black; border-radius: 0;">SHOP NOW</button>
+            <button type="button" class="btn btn-primary btn-lg" style=" margin-left: 34%; background-color: white; color: black; border-radius: 0;">SHOP NOW</button>
           </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
       	<div class="caption">
       		<h1 style="text-align: center;">APRIL SHOWERS</h1>
             <p style="text-align: center;">Battle the English drizzle with an uplifting raincoat…</p>
-            <button type="button" class="btn btn-primary btn-lg" style="background-color: white; color: black; border-radius: 0;">SHOP NOW</button>
+            <button type="button" class="btn btn-primary btn-lg" style=" margin-left: 34%; background-color: white; color: black; border-radius: 0;">SHOP NOW</button>
           </div>
           <br/>
         <a href="resources/images/7.jpg" target="_blank">
@@ -209,7 +209,7 @@
         <div class="carousel-caption">
           <h2 style="margin-left: 35%; color: #121212; text-align: left;">The Getaway Edit</h2>
           <p style="margin-left: 35%; text-align: left; color: #121212;">Your holiday wardrobe starts here...</p>
-          <button type="button" class="btn btn-primary btn-lg" style="background-color: black; border-radius: 0;">Shop Now</button>
+          <button type="button" class="btn btn-primary btn-lg" style="background-color: black; border-radius: 0; border: none;">Shop Now</button>
         </div>
       </div>
   		</div>
@@ -221,10 +221,13 @@
         <div class="carousel-caption">
           <h2 style="margin-left: 14%; color: #121212;">Candy Crush</h2>
           <p style="margin-left: 35%; text-align: left; color: #121212;">Lighten-up your spring wardrobe with delicious pastel tones</p>
-          <button type="button" class="btn btn-primary btn-lg" style="background-color: black; border-radius: 0;">Shop Now</button>
+          <button type="button" class="btn btn-primary btn-lg" style="background-color: black; border-radius: 0; border: none;">Shop Now</button>
         </div>
       </div>
   		</div>
+  	</div>
+  </div>
+
   	</div>
   </div>
 	
